--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL = mongodb+srv://suraj10004:surajsingh001@cluster0.jvnoews.mongodb.net/?retryWrites=true&w=majority
+
+DATABASE_LOCAL_URL = mongodb://localhost:27017
